[package]
name = "longestlyndonsubseq"
version = "0.1.0"
authors = ["Dominik Köppl <dominik.koeppl@uni-dortmund.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
itertools = "0.10.3"
anyhow = "1.0.60"
clap = { version = "3.2.16", features = ["derive"] }

#[profile.release]
#debug = true  # useful for cargo flamegraph